[gd_scene load_steps=9 format=2]

[ext_resource path="res://Node2d/Actors/Player_gun.tscn" type="PackedScene" id=1]
[ext_resource path="res://Node2d/Actors/Player_Script.gd" type="Script" id=2]
[ext_resource path="res://Artwork/Player/Animations/HexipodWalking Animation.png" type="Texture" id=3]
[ext_resource path="res://Node2d/Objects/ParticalsNode.tscn" type="PackedScene" id=4]
[ext_resource path="res://Node2d/Actors/Player_Camera.gd" type="Script" id=5]

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 572.059, 447.18 )

[node name="Player1" type="KinematicBody2D" groups=["Players"]]
collision_mask = 4
script = ExtResource( 2 )

[node name="Player Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 10
frame = 2
region_rect = Rect2( 83, 104, 4, 2 )

[node name="ParticalsNode" parent="Player Sprite" instance=ExtResource( 4 )]
position = Vector2( -640.039, 451.052 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Walking_ani = SubResource( 2 )
anims/idle_ani = SubResource( 3 )

[node name="Dash_timer" type="Timer" parent="."]
one_shot = true

[node name="Player_gun" parent="." instance=ExtResource( 1 )]
position = Vector2( -2, -232.961 )
rotation = -1.5708

[node name="Player Collision Area" type="Area2D" parent="." groups=["Players"]]
collision_mask = 0

[node name="Player Collision" type="CollisionShape2D" parent="Player Collision Area"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -3.90567, -67.4605 )
shape = SubResource( 4 )

[node name="Player Camera" type="Camera2D" parent="."]
modulate = Color( 1, 0.141176, 0.141176, 1 )
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( -4.0564, -745.315 )
current = true
zoom = Vector2( 1.5, 1.5 )
limit_bottom = 0
smoothing_enabled = true
offset_v = -1.0
drag_margin_left = 0.4
drag_margin_right = 0.4
script = ExtResource( 5 )

[node name="Shift_Tween" type="Tween" parent="Player Camera"]

[connection signal="emit_velocity_x" from="." to="Player_gun" method="_on_Player1_emit_velocity_x"]
[connection signal="area_entered" from="Player Collision Area" to="." method="_on_BorderArea_area_entered"]
